Fix Java 11 compatibility and successful local build